bug fix - remove gap at top of page

--- a/frontend/app/src/pages/Login/login.css
+++ b/frontend/app/src/pages/Login/login.css
@@ -3,7 +3,7 @@
   width: 100%;
   padding: 10px;
   padding-top: 50px;
-  margin: 10px 0px;
+  margin: 0px 0px 10px 0px;
   text-align: center;
   color: var(--cardtext);
 }
